--- a/MarioTributeNow/mario.css
+++ b/MarioTributeNow/mario.css
@@ -1,16 +1,29 @@
 body{
     background-color:#ffce29;
     color: antiquewhite;
+    background-image: url("https://jlaw21.github.io/Resources/mario.png");
+    background-repeat: none;
+    background-size: contain;
+    background-position: center center;
+    background-attachment: fixed;
+    font-size:100%;
+}
+h1{
+    text-align: center;
+    text-shadow: 3px 3px 2px teal;
 }
 header{
     background-color: rgb(255,57,57);
-    background-color: rgba(255,57,57,0.8);
+    /*background-image: url("https://jlaw21.github.io/Resources/mario-pipe.png");*/
+    font-family: 'Press Start 2P', cursive;
 }
 section{
     background-color: teal;
 }
 section header{
     color: #00ce00;
+    line-height: 2em;
+    text-indent: 3px;
 }
 aside{
     background-color: #007b4a;
@@ -20,7 +33,31 @@ footer{
 }
 nav{
     background-color: #007b4a;
+    background-image: url("https://jlaw21.github.io/Resources/mario-pipe.png");
+    background-size: contain;
+    color:black;
+    border:15px solid transparent;
+    border-image: url("original.jpg") 30% round;
+    
+}
+a{
+    text-decoration: none;
 }
 h3{
     color: #00deff;
+    font-size: 1.4em;
+    font-style: oblique;
+}
+p{
+    line-height: 1.2em;
+    text-shadow: 1px 1px 2px black;
+    letter-spacing: .1em;
+    word-spacing: .1em;
+    text-indent: 2px;
+}
+p,li{
+    font:small-caps 2em 'VT323', monospace;
+}
+aside{
+    text-shadow: 1px 1px 2px black;
 }
